# ASAC-401-LAP-33-DRF-Auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
snack/: models.py  permissions.py  serializers.py  urls.py  views.py
snack/migrations/: 0001_initial.py
